--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             font-weight: bold;
             transition: background 0.3s;
         }
+       
         .buttons .explore {
             background: transparent;
             color: black;
@@ -56,6 +57,7 @@
             max-width: 40%;
             position: relative;
             margin: auto;
+            margin-top: 2rem;
         }
         .image-section img {
             width: 100%;
