--- a/Trainning.html
+++ b/Trainning.html
@@ -61,15 +61,15 @@
     <main>
         <div class="container">
             <div class="content">
-                <h1>Executive Program in BIW Fixture Design</h1>
+                <h1>Exclusive Program in BIW Fixture Design</h1>
                 <p>
-                    A professional course for mechanical and design engineers to develop critical skills for career advancement.
+                    A professional course for mechanical and automobile engineers to develop critical skills for career advancement.
                     Build integrated BIW fixture designs for automotive manufacturing systems through industry-oriented projects.
                 </p>
                 <ul>
-                    <li>1 month Live Online Program  </li>
+                    <li>2 month Live Offline Program  </li>
                     <li>Program curated by industry experts to meet current demands</li>
-                    <li>Guaranteed skill improvement and career advancement</li>
+                    <li>Guaranteed skills improvement and career advancement</li>
                     <li>Access to Learning Management System</li>
                     <li>On-Demand Support from Mentors</li>
                 </ul>
@@ -100,7 +100,7 @@
                     <li>Conceptualizing and designing BIW fixtures for automotive assembly lines.</li>
                     <li>Applying GD&T in BIW fixtures.</li>
                     <li>Designing jigs, welding fixtures, and checking gauges.</li>
-                    <li>Proficiency in CAD software like CATIA, NX, or SolidWorks.</li>
+                    <li>Proficiency in CAD software like CATIA, NX,SolidWorks and Auto Cad.</li>
                     <li>Understanding tolerance stack-up analysis in fixtures.</li>
                     <li>Fixture validation, standardization, and implementation processes.</li>
                     <li>Robotic simulation for fixture design fundamentals.</li>
@@ -108,11 +108,12 @@
             </div>
 
             <div class="eligibility">
-                <h2>Who Can Take This Executive Program?</h2>
-                <p>This Executive Program is for experienced professionals looking to advance their career in the field of embedded software development. Learners must meet the following criteria to be eligible for this program:</p>
+                <h2>Who Can Take This Exclusive Program?</h2>
+                <p>This Exclusive Program is for student who are looking to advance their career in the field of embedded software development. Learners must meet the following criteria to be eligible for this program:</p>
                 <ul>
                     <li>B.E/B.Tech in Mechanical, Automobile, or related disciplines.</li>
-                    <li>Diploma/ITI</li>
+                    <li>Diploma in Mechanical, Automobile, or related disciplines.</li>
+                    <li>ITI</li>
                 </ul>
             </div>
             <div class="trial">
