--- a/Trainning.html
+++ b/Trainning.html
@@ -67,11 +67,11 @@
                     Build integrated BIW fixture designs for automotive manufacturing systems through industry-oriented projects.
                 </p>
                 <ul>
-                    <li>2 month Live Offline Program  </li>
+                    <li>2 Month live offline program  </li>
                     <li>Program curated by industry experts to meet current demands</li>
                     <li>Guaranteed skills improvement and career advancement</li>
-                    <li>Access to Learning Management System</li>
-                    <li>On-Demand Support from Mentors</li>
+                    <li>Access to learning management system</li>
+                    <li>On-Demand support from mentors</li>
                 </ul>
             </div>
             <div class="form">
