--- a/index.html
+++ b/index.html
@@ -355,9 +355,9 @@
             </div>
             <div class="slide">
                 <div class="image-section">
-                    <img src="images/10.jpg" class="active">
-                    <img src="images/11.jpg">
-                    <img src="images/12.jpg">
+                    <img src="Images/10.jpg" class="active">
+                    <img src="Images/11.jpg">
+                    <img src="Images/12.jpg">
                 </div>
                 <div style="text-align:center">
                     <span class="dot active" onclick="currentSlide(1)"></span>
@@ -396,20 +396,20 @@
         <h1 class="network">Our network</h1>
         <div class="slider">
             <div class="slider-items">
-                <img src="images/force-logo.png"
+                <img src="Images/force-logo.png"
                     alt="Force motor">
-                <img src="images/mahindra.png"
+                <img src="Images/mahindra.png"
                     alt="machindra">
-                <img src="images/merce.jpeg"
+                <img src="Images/merce.jpeg"
                     alt="mercedes">
-                <img src="images/maruti.png"
+                <img src="Images/maruti.png"
                     alt="maruti suzuki ">
-                <img src="images/komastu.png"
+                <img src="Images/komastu.png"
                     alt="komastu">
-                <img src="images/bajaj.jpeg" alt="bajaj">
+                <img src="Images/bajaj.jpeg" alt="bajaj">
                 <img src="images/damaco.png"
                     alt="damaco">
-                <img src="images/leanautomation_logo1.png"
+                <img src="Images/leanautomation_logo1.png"
                     alt="lean automation">
             </section>
 
